--- a/src/layouts/HeaderLayout/HeaderLayout.module.scss
+++ b/src/layouts/HeaderLayout/HeaderLayout.module.scss
@@ -1,15 +1,13 @@
-@import '@common/colors.scss';
-
 .container {
   display: grid;
   grid-template-rows: max-content;
   min-height: 100vh;
 
   &_bg_default {
-    background-color: $base-white;
+    background-color: var(--base-white);
   }
 
   &_bg_gray {
-    background-color: $additional-gray-light;
+    background-color: var(--additional-gray-light);
   }
 }
