--- a/src/layouts/HeaderLayout/components/Header/Header.module.scss
+++ b/src/layouts/HeaderLayout/components/Header/Header.module.scss
@@ -1,5 +1,3 @@
-@import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/breakpoints.scss';
 
 .wrapper {
@@ -9,8 +7,8 @@
 
   @include mobile-up {
     justify-content: flex-end;
-    height: 52px;
-    padding: 16px 16px 0 0;
+    min-height: 52px;
+    padding: var(--m) var(--m) 0 0;
   }
 
   @include mobile-down {
@@ -18,8 +16,8 @@
     z-index: 9998;
     top: 0;
     justify-content: space-between;
-    height: 97px;
-    padding: $xxl 16px 16px;
-    background-color: $additional-gray-middle;
+    min-height: 97px;
+    padding: var(--xxl) var(--m) var(--m);
+    background-color: var(--additional-gray-middle);
   }
 }
