--- a/src/layouts/HeaderLayout/components/MobileBurger/MobileBurger.module.scss
+++ b/src/layouts/HeaderLayout/components/MobileBurger/MobileBurger.module.scss
@@ -1,5 +1,4 @@
 @import '@common/breakpoints.scss';
-@import '@common/colors.scss';
 
 .trigger {
   @include mobile-up {
@@ -25,8 +24,8 @@
     grid-template-rows: max-content;
     height: 100vh;
     width: 164px;
-    background: $bg-gray;
-    border-right: 1px solid $additional-gray-pre-middle;
+    background: var(--bg-gray);
+    border-right: 1px solid var(--additional-gray-pre-middle);
   }
 }
 
