--- a/src/layouts/HeaderLayout/components/MobileMenu/MobileMenu.module.scss
+++ b/src/layouts/HeaderLayout/components/MobileMenu/MobileMenu.module.scss
@@ -1,5 +1,3 @@
-@import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 
 .container {
@@ -7,7 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 48px 0 16px;
+  padding: var(--xxl) 0 var(--m);
   font-family: var(--font-family-base);
 }
 
@@ -15,36 +13,33 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 48px;
+  gap: var(--xxl);
 }
 
 .buttonContainer {
   display: flex;
   align-items: center;
-  gap: 8px;
-  padding: 0 16px;
+  gap: var(--s);
+  padding: 0 var(--m);
 }
 
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 48px;
-  max-width: 48px;
-  min-height: 48px;
-  background: $base-gray;
-  border-radius: $xxs;
-}
+  min-width: var(--xxl);
+  max-width: var(--xxl);
+  min-height: var(--xxl);
+  background: var(--base-gray);
+  border-radius: var(--xxs);
 
-.button,
-.buttonText,
-.menuItem {
-  @include font-m-flat;
+  @include font-m;
 }
 
 .buttonText {
-  font-weight: 500;
-  color: $base-white;
+  color: var(--base-white);
+
+  @include font-m(500);
 }
 
 .menu {
@@ -54,15 +49,15 @@
 }
 
 .menuItem {
-  font-weight: 400;
-  color: $base-black;
+  color: var(--base-black);
+
+  @include font-m;
 }
 
 .rightsLabel {
-  padding-left: 16px;
-  font-weight: 400;
+  padding-left: var(--m);
   font-size: 11px;
-  color: $additional-gray-medium;
+  color: var(--additional-gray-medium);
 }
 
 .content {
@@ -72,10 +67,10 @@
   min-height: 100vh;
 
   &_bg_default {
-    background: $additional-gray-light;
+    background: var(--additional-gray-light);
   }
 
   &_bg_contrast {
-    background: $base-white;
+    background: var(--base-white);
   }
 }
