--- a/src/layouts/HeaderLayout/components/MobileMenuItem/MobileMenuItem.module.scss
+++ b/src/layouts/HeaderLayout/components/MobileMenuItem/MobileMenuItem.module.scss
@@ -1,26 +1,24 @@
-@import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 
 .container {
   display: flex;
   align-items: center;
-  padding: 12px 16px;
+  padding: 12px var(--m);
   background-color: transparent;
   cursor: pointer;
   transition: background-color 0.3s;
 
   &:hover {
-    background-color: $additional-gray-middle;
+    background-color: var(--additional-gray-middle);
   }
 
   &:active {
-    background-color: $additional-gray-middle;
+    background-color: var(--additional-gray-middle);
   }
 }
 
 .disabled {
-  background-color: $bg-gray;
+  background-color: var(--bg-gray);
   cursor: not-allowed;
   opacity: 0.6;
 }
@@ -30,16 +28,13 @@
   align-items: center;
   width: 24px;
   height: 24px;
-  margin-right: 8px;
+  margin-right: var(--s);
 }
 
 .label {
-  font-weight: 600;
-
-  @include font-m-flat;
+  @include font-m(600);
 }
 
 .active {
-  font-weight: 600;
-  background-color: $additional-gray-middle;
+  background-color: var(--additional-gray-middle);
 }
