--- a/src/shared/ui-kit/Table/TableSkeleton.module.scss
+++ b/src/shared/ui-kit/Table/TableSkeleton.module.scss
@@ -6,11 +6,11 @@
   grid-template-columns: subgrid;
 
   @include mobile-up {
-    padding: 0 32px;
+    padding: 0 var(--xl);
   }
 
   @include mobile-down {
-    padding: 0 16px;
+    padding: 0 var(--m);
   }
 }
 
@@ -22,7 +22,8 @@
 
 .cell {
   display: inline-flex;
-  padding: 14px 0;
+  align-items: center;
+  height: var(--xxl);
 }
 
 .selectionCell {
