--- a/src/shared/ui-kit/Tabs/Tabs.module.scss
+++ b/src/shared/ui-kit/Tabs/Tabs.module.scss
@@ -1,5 +1,3 @@
-@import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 
 .container {
@@ -9,43 +7,41 @@
 .tabList {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: var(--s);
 }
 
 .tabItem {
-  height: 32px;
-  padding: 16px;
-  font-weight: 500;
+  height: var(--xl);
+  padding: var(--m);
   vertical-align: middle;
   border-radius: 100px;
   cursor: pointer;
   transition: all 0.3s ease;
 
+  @include font-m(500);
+
   &:hover {
-    background-color: $additional-gray-middle;
+    background-color: var(--additional-gray-middle);
   }
 
   &_active {
-    padding: 8px 16px;
+    padding: var(--s) var(--m);
     font-weight: bold;
-    color: $base-black;
-    background-color: $additional-gray-middle;
+    color: var(--base-black);
+    background-color: var(--additional-gray-middle);
     border-radius: 100px;
   }
 
   &__label {
     text-transform: capitalize;
-
-    @include font-m-flat;
   }
 
   .badge {
     position: relative;
     top: -1px;
-    left: 4px;
-    font-weight: 700;
-    color: $additional-gray-medium;
+    left: var(--xxs);
+    color: var(--additional-gray-medium);
 
-    @include font-s-flat;
+    @include font-s(700);
   }
 }
