--- a/src/shared/ui-kit/Tabs/components/TabItem/TabItem.module.scss
+++ b/src/shared/ui-kit/Tabs/components/TabItem/TabItem.module.scss
@@ -1,10 +1,8 @@
-@import '@common/variables.scss';
-@import '@common/colors.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
 .container {
-  padding: 8px 16px;
+  padding: var(--s) var(--m);
   border-radius: 100px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -15,27 +13,26 @@
   }
 
   &:hover {
-    background-color: $additional-gray-middle;
+    background-color: var(--additional-gray-middle);
   }
 
   &[data-state='active'] {
     font-weight: bold;
-    color: $base-black;
-    background-color: $additional-gray-middle;
+    color: var(--base-black);
+    background-color: var(--additional-gray-middle);
     border-radius: 100px;
   }
 }
 
 .label {
-  @include font-m-flat;
+  @include font-m(500);
 }
 
 .badge {
   position: relative;
   top: -1px;
-  left: 4px;
-  font-weight: 700;
-  color: $additional-gray-medium;
+  left: var(--xxs);
+  color: var(--additional-gray-medium);
 
-  @include font-s-flat;
+  @include font-s(700);
 }
