--- a/src/shared/ui-kit/Tabs/components/TabItem/TabItem.module.scss
+++ b/src/shared/ui-kit/Tabs/components/TabItem/TabItem.module.scss
@@ -17,10 +17,13 @@
   }
 
   &[data-state='active'] {
-    font-weight: bold;
     color: var(--base-black);
     background-color: var(--additional-gray-middle);
     border-radius: 100px;
+
+    .label {
+      font-weight: bold;
+    }
   }
 }
 
