--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -28,36 +28,17 @@
 
   --bg-gray: #eee;
 
-  --font-xxs: 8px/12px;
-
-  --font-xs: 10px/14px;
-
-  --font-s-flat: 12px/14px;
-  --font-s: 12px/16px;
-
-  --font-m-flat: 14px/16px;
-  --font-m: 14px/20px;
-
-  --font-l-flat: 16px/20px;
-  --font-l: 16px/22px;
-
-  --font-xl-flat: 18px/22px;
-  --font-xl: 18px/24px;
-
-  --font-2xl-flat: 20px/24px;
-  --font-2xl: 20px/28px;
-
-  --font-2-5xl: 22px/28px;
-
-  --font-3xl: 24px/30px;
-
-  --font-4xl: 32px/34px;
-  --font-4xl-flat: 32px/24px;
-
-  --font-5xl: 40px/50px;
-
-  --font-6xl: 68px/83px;
-  --font-6xl-flat: 68px/70px;
-
-  --font-10xl: 100px/110px;
+  --font-xxs: 8px;
+  --font-xs: 10px;
+  --font-s: 12px;
+  --font-m: 14px;
+  --font-l: 16px;
+  --font-xl: 18px;
+  --font-2xl: 20px;
+  --font-2-5xl: 22px;
+  --font-3xl: 24px;
+  --font-4xl: 32px;
+  --font-5xl: 40px;
+  --font-6xl: 68px;
+  --font-10xl: 100px;
 }
